--- a/p/index.html
+++ b/p/index.html
@@ -5,9 +5,9 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
         <meta http-equiv="X-UA-Compatible" content="IE=opera">
-        <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/parts">
+        <link rel="canonical" href="https://ourlibrary.us/parts">
         <meta property="og:title" content="parts | Ourlibrary">
-        <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/parts">
+        <meta property="og:url" content="https://ourlibrary.us/parts">
         
         <meta name="description" property="og:description" content="">
                 <script nonce="">
@@ -42,7 +42,7 @@
 <link rel="preconnect" href="https://assets.github.org">
 <link rel="stylesheet" type="text/css" href="css/style.css">    </head>
     <body id="top" class="jw-is-no-slideshow jw-header-is-image-text jw-is-segment-page jw-is-frontend jw-is-no-sidebar jw-is-no-messagebar jw-is-no-touch-device jw-is-no-mobile" data-Ourlibrary-page="17081279" data-Ourlibrary-segment-id="17081279" data-Ourlibrary-segment-type="page" data-template-threshold="960" data-template-name="beautysalon|fotografie" itemscope="" itemtype="https://schema.org/WebPage">
-        <meta itemprop="url" content="https://dnm23.github.io/ourlibrary.com/parts">
+        <meta itemprop="url" content="https://ourlibrary.us/parts">
         <div class="jw-background"></div>
         <div class="jw-body">
             <div class="jw-mobile-menu jw-mobile-is-text js-mobile-menu">
@@ -73,32 +73,32 @@
         <nav class="menu jw-menu-copy clear">
             <ul id="jw-menu" class="jw-menu jw-menu-horizontal">
             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/" data-page-link-id="17079820">
+        <a class="jw-menu-link" href="https://ourlibrary.us/" data-page-link-id="17079820">
                 <span class="">
             Home        </span>
             </a>
                 </li>
             <li class="jw-menu-item jw-menu-has-submenu">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/books" data-page-link-id="17079931">
+        <a class="jw-menu-link" href="https://ourlibrary.us/books" data-page-link-id="17079931">
                 <span class="">
             Books        </span>
                     <span class="jw-arrow jw-arrow-toplevel"></span>
             </a>
                     <ul class="jw-submenu">
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/books/farsi-f-rs" data-page-link-id="17079939">
+        <a class="jw-menu-link" href="https://ourlibrary.us/books/farsi-f-rs" data-page-link-id="17079939">
                 <span class="">
             Farsi فارسی        </span>
             </a>
                 </li>
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/books/n-z-sh" data-page-link-id="17096406">
+        <a class="jw-menu-link" href="https://ourlibrary.us/books/n-z-sh" data-page-link-id="17096406">
                 <span class="">
             انگیزیشی        </span>
             </a>
                 </li>
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/books/english-n-l-s" data-page-link-id="17079941">
+        <a class="jw-menu-link" href="https://ourlibrary.us/books/english-n-l-s" data-page-link-id="17079941">
                 <span class="">
             English انگلیسی        </span>
             </a>
@@ -106,20 +106,20 @@
                     </ul>
         </li>
             <li class="jw-menu-item jw-menu-has-submenu">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/films" data-page-link-id="17079914">
+        <a class="jw-menu-link" href="https://ourlibrary.us/films" data-page-link-id="17079914">
                 <span class="">
             Films        </span>
                     <span class="jw-arrow jw-arrow-toplevel"></span>
             </a>
                     <ul class="jw-submenu">
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/films/moz-sh-o-n-z-sh" data-page-link-id="17081981">
+        <a class="jw-menu-link" href="https://ourlibrary.us/films/moz-sh-o-n-z-sh" data-page-link-id="17081981">
                 <span class="">
             اموزیشی و انگیزیشی        </span>
             </a>
                 </li>
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/films/f-lm-h-o-doblh" data-page-link-id="17081982">
+        <a class="jw-menu-link" href="https://ourlibrary.us/films/f-lm-h-o-doblh" data-page-link-id="17081982">
                 <span class="">
             فیلم هاى دوبله        </span>
             </a>
@@ -127,20 +127,20 @@
                     </ul>
         </li>
             <li class="jw-menu-item jw-menu-has-submenu">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/series" data-page-link-id="17079922">
+        <a class="jw-menu-link" href="https://ourlibrary.us/series" data-page-link-id="17079922">
                 <span class="">
             Series        </span>
                     <span class="jw-arrow jw-arrow-toplevel"></span>
             </a>
                     <ul class="jw-submenu">
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/series/sr-l-rh" data-page-link-id="17081081">
+        <a class="jw-menu-link" href="https://ourlibrary.us/series/sr-l-rh" data-page-link-id="17081081">
                 <span class="">
             سریال کره ای        </span>
             </a>
                 </li>
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/series/sr-l-kh-r-g" data-page-link-id="17081084">
+        <a class="jw-menu-link" href="https://ourlibrary.us/series/sr-l-kh-r-g" data-page-link-id="17081084">
                 <span class="">
             سریال خاریجی        </span>
             </a>
@@ -148,13 +148,13 @@
                     </ul>
         </li>
         <li class="jw-menu-item">
-            <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/Live-sport" data-link-id="23774449">
+            <a class="jw-menu-link" href="https://ourlibrary.us/Live-sport" data-link-id="23774449">
                 <span class="">
             Live Sport        </span>
             </a>
                 </li>
             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/computer" data-page-link-id="24489667">
+        <a class="jw-menu-link" href="https://ourlibrary.us/computer" data-page-link-id="24489667">
                 <span class="">
             computer        </span>
             </a>
@@ -169,7 +169,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/"
+        href="https://ourlibrary.us/"
                                             data-page-link-id="17079820"
                             >
                 <span class="">
@@ -181,7 +181,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/books"
+        href="https://ourlibrary.us/books"
                                             data-page-link-id="17079931"
                             >
                 <span class="">
@@ -196,7 +196,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/books/farsi-f-rs"
+        href="https://ourlibrary.us/books/farsi-f-rs"
                                             data-page-link-id="17079939"
                             >
                 <span class="">
@@ -208,7 +208,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/books/n-z-sh"
+        href="https://ourlibrary.us/books/n-z-sh"
                                             data-page-link-id="17096406"
                             >
                 <span class="">
@@ -220,7 +220,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/books/english-n-l-s"
+        href="https://ourlibrary.us/books/english-n-l-s"
                                             data-page-link-id="17079941"
                             >
                 <span class="">
@@ -234,7 +234,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/films"
+        href="https://ourlibrary.us/films"
                                             data-page-link-id="17079914"
                             >
                 <span class="">
@@ -249,7 +249,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/films/moz-sh-o-n-z-sh"
+        href="https://ourlibrary.us/films/moz-sh-o-n-z-sh"
                                             data-page-link-id="17081981"
                             >
                 <span class="">
@@ -261,7 +261,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/films/f-lm-h-o-doblh"
+        href="https://ourlibrary.us/films/f-lm-h-o-doblh"
                                             data-page-link-id="17081982"
                             >
                 <span class="">
@@ -275,7 +275,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/series"
+        href="https://ourlibrary.us/series"
                                             data-page-link-id="17079922"
                             >
                 <span class="">
@@ -290,7 +290,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/series/sr-l-rh"
+        href="https://ourlibrary.us/series/sr-l-rh"
                                             data-page-link-id="17081081"
                             >
                 <span class="">
@@ -302,7 +302,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/series/sr-l-kh-r-g"
+        href="https://ourlibrary.us/series/sr-l-kh-r-g"
                                             data-page-link-id="17081084"
                             >
                 <span class="">
@@ -316,7 +316,7 @@
 >
             <a
            class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/Live-sport"
+        href="https://ourlibrary.us/Live-sport"
                                     data-link-id="23774449">
 
 
@@ -329,7 +329,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/computer"
+        href="https://ourlibrary.us/computer"
                                             data-page-link-id="24489667"
                             >
                 <span class="">
